feat: implement S10 (52-week high breakout) & S12 (closing strength) strategies
- **api-orchestrator**: Introduced `S10_NEW_HIGH` and `S12_CLOSING` strategies.
  - Added `checkNewHigh()` for detecting 52-week high breakout patterns (11:00–14:00).
  - Added `checkClosingStrength()` for closing strength detection (14:30–15:10).
- **telegram-bot**: Integrated new commands for S10/S12 strategy execution and help updates.
- **ai-engine**: Updated Redis data dependencies for signal evaluation on WS-ticks.
- **docs**: Documented new strategies, updated schedule summary, and detailed conditional logic.

Includes minor improvements to WS status tracking and Redis key handling.